--- a/My-personal-website/index.html
+++ b/My-personal-website/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ecommerce Website Design</title>
 
-    <!----Custom css link------>
+
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -33,6 +33,7 @@
                 that I need to review some knowledge, as well as learning new skills</p>
         <p>And, as I have already mentioned, I am the mother of two toddlers of 3 and 1, and OMG, that's pretty hardcore! 
 <br> These are my girls, Luna and Sunna. Aren't they lovely and wonderful? <br>
+<img src="309261600_6197155786966776_6881159254414651167_n.jpg" alt="toddlers">" alt="toddlers">
 <p>At the moment, I am taking Meta's front end development course offered by <a href="https://www.coursera.org/professional-certificates/meta-front-end-developer">Coursera</a>.</p>
     <p>I was fortunate enough to receive finacial aid= free course!</p> 
 
@@ -44,4 +45,15 @@
 
 </body>
 
+<h3>30/09/2022  </h3>
+<h1>Why Aventurera Del Sur?</h1>
+
+<p>So, I was in The Netherlands, stranded. I lost my passport on a short trip to Amsterdam. I noticed 2 days after, and I was in complete shock! I had to travel to Berlin soon to start a new chapter in my life.  My new passport with a German visa.
+<br>I was lucky to have free accommodation in a huge house though, and while I waited more than a month for this passport, I improvised melodies and a song was born : " Aventurera del Sur, les digo que la vida, la vida es una cancion". I jotted it down and I recorded it on my computer. 
+I still have to ask my friend Robinson, to lend me a hand to record it<em>the way it should be</em>. 
+By then, October 2014, I was thinking about all the adventures I have lived in the countries I have visited and stayed. <br>A song conforted me. <br>
+<p>I am certain, travellers and expats will identify with the intensity of experiences lived abroad. I guess sometimes we feel like in our own movie.</p>
+</p>
+
 </html>
+
