--- a/My-Personal-Website/index.html
+++ b/My-Personal-Website/index.html
@@ -53,7 +53,33 @@
 I still have to ask my friend Robinson, to lend me a hand to record it<em>the way it should be</em>. 
 By then, October 2014, I was thinking about all the adventures I have lived in the countries I have visited and stayed. <br>A song conforted me. <br>
 <p>I am certain, travellers and expats will identify with the intensity of experiences lived abroad. I guess sometimes we feel like in our own movie.</p>
-</p>
 
+
+<h3>It's a sad world<h3>
+  <h1>
+    When a close one leaves this earth</h1>
+                                          
+<p>Talking about death is not a taboo for me. At 27, I was about to leave this world due to an internal hemorrhage. One of my ovaries was profusedly bleeding and my toraxic cavity was filling up with blood. And this took place just out of the blue.</p>
+  
+  <em>I survived.</em><br>
+  <p> After that experience, I am always aware, your most love ones can just leave this earthly world in the blink of an eye</p> <p> Young, old, rich, poor, death can always visit you</p>
+  
+ <p>Now, imagine that delicate moment. A family member passes and you are in another continent, with a weeks old baby and no money for a flight ticket.</p> <p> That was me in 2019, when my father died from an aortic aneurysm.</p>
+  <p> I know he would have said 
+    <em>Stay there with your family"</em>
+      , but the guilt was eating me inside.</p>
+  <em> I stayed.</em> <br>
+  
+  <p> One of the very few friends I have attended his funeral, and my cousin took a message. </p>
+  
+  <p>One of the reasons, and the most important we move to Denmark, was that we would be closer to the family. </p> <p> And even though <em>farfar</em> or grandpa doesn't live in Copenhagen, we often visit him.</p>
+  
+  <p>He will leave us very soon</p>
+  <p>How can I explain my daughter when he is gone?
+  </p> <p> How do I tell her <em>"Luna, he is not home anymore, we cannot visit him and go for a walk
+  again</em>
+  <p>Sometimes I regret not starting younger having children, so that their grandparents would have more time with them </p>
+  
+  <p>And we should love each other and show it every day</p>
+  
 </html>
-
