--- a/My-Personal-Website/index.html
+++ b/My-Personal-Website/index.html
@@ -2,14 +2,25 @@
 <html>
 
 <head>
+  
+  <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#blog">Blog</a>
+    <a href="#shop
+           ">Shop</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
   <link href="https://fonts.googleapis.com/css?family=Ultra|Work+Sans:400,500" rel="stylesheet">
     <meta charset="utf-8" <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ecommerce Website Design</title>
+  <title>Aventurera Del Sur</title>
 
 
     <link rel="stylesheet" href="style.css">
 </head>
-
+<br>
+  <br>
+  <br>
 <body>
     <h1>Hello amazing world</h1>
     <p>Hi, earthlings! So here I am, without internet at 23:44. It was a rough day with the toddlers, and I am falling
@@ -23,8 +34,7 @@
         don't
         depend on Etsy anymore and I suffer from their high fees.</p>
 
-    <p>The articles sold are mostly rare finds and collectibles, and normally their prices range from 50 EUR to 399 EUR.
-        Yep, not cheap stuff. </p>
+  <p>The articles sold are mostly rare finds and collectibles. I really enjoy curating them</p>
 
         <p>Now, going back to the challenge. The idea is that I write code everyday during 100 days for at least 2 hours, and I document it. 
            I am indeed documenting this amazing journey on <a href="http://www.github.com/grecodes/100daysofcode">GitHub account</a>. 
@@ -33,7 +43,9 @@
                 that I need to review some knowledge, as well as learning new skills</p>
         <p>And, as I have already mentioned, I am the mother of two toddlers of 3 and 1, and OMG, that's pretty hardcore! 
 <br> These are my girls, Luna and Sunna. Aren't they lovely and wonderful? <br>
-<img src="toddlers.jpg" alt="toddlers">
+<img src="https://raw.githubusercontent.com/GreCodes/100-days-of-code/master/My-Personal-Website/toddlers.jpg" width="400" 
+     height="auto"
+          alt="toddlers">
 <p>At the moment, I am taking Meta's front end development course offered by <a href="https://www.coursera.org/professional-certificates/meta-front-end-developer">Coursera</a>.</p>
     <p>I was fortunate enough to receive finacial aid= free course!</p> 
 
